main: added navbar and is functionality

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,3 +22,9 @@
   font-family: "Rubik Mono One", sans-serif;
   font-weight: 100;
 }
+
+@media (max-width: 768px) {
+  .navbar {
+    display: none;
+  }
+}
